--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,8 @@
   color: var(--orange);
   border: 1px solid var(--orange);
 }
+
+@font-face {
+  font-family: 'Neon Glow';
+  src: url(https://assets.codepen.io/230569/NeonGlow-8VLz.ttf);
+}
